# nerine

./: README.md  pyproject.toml
src/nerine/demo/: __init__.py  io.py  reader.py
src/nerine/entities/: message_type.py
src/nerine/proto/: demo.py
src/nerine/proto/common/: demo.py
